[tool.poetry]
name = "rnpo-web-tools"
version = "0.1.0"
description = ""
authors = ["Ramil Albakov <ramil.albakov2@gmail.com>"]
readme = "README.md"
packages = [{include = "rnpo_web_tools"}]

[tool.poetry.dependencies]
python = "3.8.2"
Django = "^4.1.2"
cx-Oracle = "^8.3.0"
python-dotenv = "^0.21.0"
openpyxl = "^3.0.10"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
