[tool.poetry]
name = "rnpo-web-tools"
version = "0.1.0"
description = ""
authors = ["Ramil Albakov <ramil.albakov2@gmail.com>"]
readme = "README.md"
packages = [{include = "rnpo_web_tools"}]

[tool.poetry.dependencies]
python = "3.8.2"
Django = "^4.1.2"
cx-Oracle = "^8.3.0"
python-dotenv = "^0.21.0"
openpyxl = "^3.0.10"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
enm-client-scripting = {path = "local_packages/enm_client_scripting-1.20.1-py2.py3-none-any.whl"}
geopy = "^2.3.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
